# QtQuick3DPipes

./: CMakeLists.txt  README.md  qml.qrc
qml/: CylinderPipe.qml  SpherePipe.qml  main.qml
src/: PipeController.cpp  PipeController.h  PipeEnums.h  PipeModel.cpp  PipeModel.h  PipeObject.cpp  PipeObject.h  main.cpp
